syntax = "proto3";

package api.ums.service.v1;

import "google/protobuf/empty.proto";

option go_package = "github.com/lalifeier/vvgo/api/ums/service/v1;v1";

service Ums {
  rpc Register(RegisterReq) returns (RegisterResp);
  rpc Login(LoginReq) returns (LoginResp);
  rpc Logout(LogoutReq) returns (LogoutResp);

  rpc CreateAccountUser(CreateAccountUserReq) returns (CreateAccountUserResp);
  rpc UpdateAccountUser(UpdateAccountUserReq) returns (google.protobuf.Empty);
  rpc DeleteAccountUser(DeleteAccountUserReq) returns (google.protobuf.Empty);
  rpc GetAccountUser(GetAccountUserReq) returns (GetAccountUserResp);
  rpc ListAccountUser(ListAccountUserReq) returns (ListAccountUserResp);
}

message RegisterReq {
  string email = 1;
  string phone = 2;
  string username = 3;
  string password = 4;
}
message RegisterResp { int64 id = 1; }

message LoginReq {
  string username = 1;
  string password = 2;
  string phone = 3;
  string email = 4;
  string code = 5;
  string type = 6;
}
message LoginResp {}

message LogoutReq {}
message LogoutResp {}

message AccountUser {
  int64 id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
  string phone = 5;
}
message CreateAccountUserReq {
  string username = 2;
  string password = 3;
  string email = 4;
  string phone = 5;
}
message CreateAccountUserResp { int64 id = 1; }
message UpdateAccountUserReq {
  int64 id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
  string phone = 5;
}
message DeleteAccountUserReq { int64 id = 1; }
message GetAccountUserReq { int64 id = 1; }
message GetAccountUserResp {
  int64 id = 1;
  string username = 2;
  string password = 3;
  string email = 4;
  string phone = 5;
}
message ListAccountUserReq {
  int64 pageNum = 1;
  int64 pageSize = 4;
}
message ListAccountUserResp {
  int64 totalPages = 1;
  int64 currentPage = 2;
  int64 pageSize = 3;
  repeated AccountUser data = 4;
}
